deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: kube-system    # <-- Add your namespace here
  labels:
    application: kube-ops-view
    version: v0.9.1
  name: kube-ops-view
spec:
  replicas: 1
  selector:
    matchLabels:
      application: kube-ops-view
  template:
    metadata:
      labels:
        application: kube-ops-view
        version: v0.9.1
    spec:
      serviceAccount: kube-ops-view
      containers:
      - name: service
        image: hjacobs/kube-ops-view:0.9.1
        ports:
        - containerPort: 8080
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 5
          timeoutSeconds: 1
        resources:
          limits:
            cpu: 200m
            memory: 100Mi
          requests:
            cpu: 50m
            memory: 50Mi
        securityContext:
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          runAsUser: 1000
